--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="widget_background">#FFFFFF</color>
+    <color name="widget_text">#000000</color>
+    <color name="app_background">#F5F5F5</color>
     <color name="ic_launcher_background">#090909</color>
 </resources>
