--- a/app/src/main/res/values/ic_launcher_background.xml
+++ b/app/src/main/res/values/ic_launcher_background.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!-- DELETED TO FIX DUPLICATE RESOURCE ISSUE -->
 <resources>
-    <color name="ic_launcher_background">#090909</color>
 </resources>
