--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -131,8 +131,19 @@
                 android:overScrollMode="always"
                 android:scrollbars="vertical"
                 android:textColor="?attr/colorOnSurface"
-                android:textColorHint="#546E7A" />
+                android:textColorHint="#546E7A"
+                android:textSize="18sp" />
         </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/button_text_size"
+            style="@style/Widget.Material3.Button.TextButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Text size 18"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/input_layout_note" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_save"
