--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -137,19 +137,20 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_text_size"
-            style="@style/Widget.Material3.Button.TextButton"
+            style="@style/Widget.Material3.Button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Text size 18"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_height="0dp"
+            android:text="@string/text_size_18"
+            app:layout_constraintBottom_toBottomOf="@id/button_save"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/input_layout_note" />
+            app:layout_constraintTop_toTopOf="@id/button_save" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_save"
             style="@style/Widget.Material3.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
             android:text="@string/save"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
